maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:21: error: not found: value getWoldHeight
    for (y <- 0 to getWoldHeight() -1) {
                   ^ShortestPathMaze:37: error: not found: value getWordlHeight
  if (x < 0 || y < 0 || x >= getWorldWidth() || y >= getWordlHeight()) {
                                                     ^ShortestPathMaze:48: error: type mismatch;
 found   : (Int, Int, Int)
 required: Int
    return (xn, yn, indication);
           ^ShortestPathMaze:51: error: not found: value maxNeighborY
  return (minNeighborX, maxNeighborY, min);
                        ^ShortestPathMaze:57: error: not enough arguments for method processNeighbor: (x: Int, y: Int, xn: Int, yn: Int, minNeighborX: Int, minNeighBorY: Int, min: Int)Int.
Unspecified value parameters minNeighBorY, min.
      var min = processNeighbor(x, y, -1, 0, NO_INDICATION);
                               ^ShortestPathMaze:58: error: not enough arguments for method processNeighbor: (x: Int, y: Int, xn: Int, yn: Int, minNeighborX: Int, minNeighBorY: Int, min: Int)Int.
Unspecified value parameters minNeighBorY, min.
      min = processNeighbor(x, y, 1, 0, min);
                           ^ShortestPathMaze:59: error: not enough arguments for method processNeighbor: (x: Int, y: Int, xn: Int, yn: Int, minNeighborX: Int, minNeighBorY: Int, min: Int)Int.
Unspecified value parameters minNeighBorY, min.
      min = processNeighbor(x, y, 0, -1, min);
                           ^ShortestPathMaze:60: error: not enough arguments for method processNeighbor: (x: Int, y: Int, xn: Int, yn: Int, minNeighborX: Int, minNeighBorY: Int, min: Int)Int.
Unspecified value parameters minNeighBorY, min.
      min = processNeighbor(x, y, 0, 1, min);
                           ^